fixed no overflow when navbar open

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@
 body,
 html {
   max-width: 100vw;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  /* overflow-y: inherit; */
 }
 
 body {
@@ -31,26 +32,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f7f7f7;
-  overflow-y: auto;
-  overflow-x: hidden;
+  /* overflow-y: auto; */
+  /* overflow-x: hidden; */
   /*Fallback if gradeints don't work */
 
   background: #9b59b6;
 
   background: radial-gradient(at center, #3498db, #9b59b6);
-
-  /* background: rgb(4, 53, 204);
-  background: linear-gradient(
-    90deg,
-    rgba(4, 53, 204, 1) 0%,
-    rgba(11, 48, 160, 1) 35%,
-    rgba(26, 39, 76, 1) 100%
-  ); */
 }
-/* background-image: url("https://anima-uploads.s3.amazonaws.com/projects/5fb14441119f80c2053ea467/releases/5fb14452ac34b30698d1c801/img/01maindemo-rectangle-2-F05F0B6A-9C51-4A16-A795-BC7F67EC0F4E.png");
-  background-repeat: no-repeat;
-  background-size: auto; */
-/* } */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
